--- a/fiction.html
+++ b/fiction.html
@@ -221,10 +221,10 @@
             </ul>
           </div>
         </div>
-        <div class="cta">
-          <a class="btn toggle-flipbook js-open-flipbook" href="#flip-001" data-target="flip-001">Read Issue</a>
-          <a class="btn secondary" href="https://heyzine.com/flip-book/6c786ba517.html" target="_blank" rel="noopener">Download PDF</a>
-        </div>
+<div class="cta">
+  <a class="btn toggle-flipbook js-open-flipbook" href="#flip-001" data-target="flip-001">Read Issue</a>
+  <a class="btn secondary" href="Burnline-Issue-01.pdf" download="Burnline-Issue-01.pdf">Download PDF</a>
+</div>
       </div>
     </section>
 
