--- a/index.html
+++ b/index.html
@@ -217,6 +217,24 @@
       margin-top: 1rem;
       transition: background-color 0.3s;
     }
+    .btn {
+  background: var(--cyan);
+  color: var(--ink-dark);
+  border: none;
+  font-weight: 800;
+  padding: .65rem 1rem;
+  border-radius: 8px;
+  cursor: pointer;
+  display: inline-block;
+  text-align: center;
+  text-decoration: none;
+}
+
+.btn.secondary {
+  background: transparent;
+  color: var(--cyan);
+  border: 1px solid rgba(13,246,227,0.45);
+}
     .read-issue-btn:hover { background-color: var(--cyan-hover); }
     
     .button-row {
@@ -336,8 +354,8 @@
 </div>
 
 <div class="button-row" style="width: 100%; margin-top: 2.5rem;">
-  <button id="toggle-flipbook" class="read-issue-btn">Read This Issue</button>
-  <a class="read-issue-btn" href="Burnline-Issue-01.pdf" download="Burnline-Issue-01.pdf">Download PDF</a>
+  <button id="toggle-flipbook" class="btn">Read This Issue</button>
+  <a class="btn secondary" href="Burnline-Issue-01.pdf" download="Burnline-Issue-01.pdf">Download PDF</a>
 </div>
   </section>
 
@@ -422,4 +440,5 @@
   </script>
 </body>
 </html>
+
 
