--- a/index.html
+++ b/index.html
@@ -217,11 +217,12 @@
       margin-top: 1rem;
       transition: background-color 0.3s;
     }
-    .btn {
+.btn {
   background: var(--cyan);
   color: var(--ink-dark);
   border: none;
   font-weight: 800;
+  font-family: 'Inter', sans-serif; 
   padding: .65rem 1rem;
   border-radius: 8px;
   cursor: pointer;
@@ -235,6 +236,7 @@
   color: var(--cyan);
   border: 1px solid rgba(13,246,227,0.45);
 }
+
     .read-issue-btn:hover { background-color: var(--cyan-hover); }
     
     .button-row {
@@ -440,5 +442,6 @@
   </script>
 </body>
 </html>
+
 
 
