--- a/about.html
+++ b/about.html
@@ -195,9 +195,9 @@
 
   <section class="content">
     <h1 class="gradient-heading">About Burnline</h1>
-    <p><strong>Burnline</strong> is a digital magazine run by a small crew who's tried our best to make a hub for all things cyberpunk. It started when one of us was looking for a spot to publish some cyberpunk short fiction and failed to do so. Is it possible that they were never published because their work sucked? Absolutely, but that doesn't change the fact that there weren't many outlets dedicated purely to the cyberpunk subgenre. We wanted there to be a cohesive place for that.</p>
-    <p>We publish stories, art, and commentary that reflects the weirdness of whatever the hell cyberpunk is supposed to be. Feel like the real world is folding in on itself? Us too. Let's make some art about it.</p>
-    <p>If you’d like to submit, collaborate, or just say hi, head over to our  <a href="submit.html" class="gradient-blue-text">Submit page</a> or reach out at <a href="mailto:contact@burnlinemag.com" class="gradient-pink-text">contact@burnlinemag.com</a>. If there's anything we don't express on this site that you think belongs here, we'd love to hear about it.</p>
+    <p>Burnline is a digital magazine run by a team of 1 who's trying his best to make a hub for some good cyberpunk fiction and artwork. It started when the editor was looking for short fiction in the subgenre to read but couldn't find a ton of it. Surely it's out there, right? Hopefully Burnline can be a good landing place for that sort of thing.</p>
+    <p>Burnline hopes to publish stories and art that reflect what you picture when you think cyberpunk. Feel like the real world is folding in on itself? Same. Let's make some art about it.</p>
+    <p>If you’d like to submit, collaborate, or just say hi, head over to the  <a href="submit.html" class="gradient-blue-text">Submit page</a> or reach out at <a href="mailto:contact@burnlinemag.com" class="gradient-pink-text">contact@burnlinemag.com</a>. If there's anything Burnline's site/magazine doesn't show that you think belongs here, this editor would love to hear about it.</p>
   </section>
 
   <footer>
