--- a/about.html
+++ b/about.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -195,8 +195,9 @@
 
   <section class="content">
     <h1 class="gradient-heading">About Burnline</h1>
-    <p>Burnline is a digital magazine run by a team of 1 who's trying his best to make a hub for some good cyberpunk fiction and artwork. It started when the editor was looking for short fiction in the subgenre to read but couldn't find a ton of it. Surely it's out there, right? Hopefully Burnline can be a good landing place for that sort of thing.</p>
-    <p>Burnline hopes to publish stories and art that reflect what you picture when you think cyberpunk. Feel like the real world is folding in on itself? Same. Let's make some art about it.</p>
+    <p>Burnline is a digital magazine run by a team of 1 (me) who's trying his best to make a hub for some good cyberpunk fiction and artwork. I made this because was looking for short fiction in the subgenre to read but couldn't find a ton of it. Surely it's out there, right? Hopefully Burnline can be a good landing place for that sort of thing.</p>
+    <p>I hope to publish stories and art that reflect what you picture when you think cyberpunk. Feel like the real world is folding in on itself? Me too. Let's make some art about it.</p>
+    <p>This website and all magazine issues are currently and always will be 100% ad free because I fucking hate digital ads. You should be able to just read something without being bothered. As a result, I may charge a small fee for future editions so that I can pay the writers/artists whose work I publish. For the meantime, the magazine is free, because free is good.</p>
     <p>If you’d like to submit, collaborate, or just say hi, head over to the  <a href="submit.html" class="gradient-blue-text">Submit page</a> or reach out at <a href="mailto:contact@burnlinemag.com" class="gradient-pink-text">contact@burnlinemag.com</a>. If there's anything Burnline's site/magazine doesn't show that you think belongs here, this editor would love to hear about it.</p>
   </section>
 
