--- a/index.html
+++ b/index.html
@@ -391,13 +391,11 @@
       </div>
       <div class="footer-column">
         <h4 style="color: var(--cyan);">Get In Touch</h4>
-        <p>contact@burnlinemag.com<br><span style="font-size: 0.8rem;">(no story submissions by email)</span></p>
+        <p>contact@burnlinemag.com<br><span style="font-size: 0.8rem;"></p>
       </div>
       <div class="footer-column">
         <h4 style="color: var(--cyan);">Read</h4>
         <p><a href="https://bowliopia.github.io/burnline/fiction.html">Issue 01</a></p>
-        <p><a href="https://bowliopia.github.io/burnline/fiction.html">Issue 02</a></p>
-        <p><a href="https://bowliopia.github.io/burnline/fiction.html">Issue 03</a></p>
       </div>
     </div>
     <div class="footer-bottom">
@@ -432,3 +430,4 @@
   </script>
 </body>
 </html>
+
