--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
     <div class="footer-container">
       <div class="footer-column">
         <img src="Flame logo-1.png.png" alt="Burnline Logo" class="footer-logo">
-        <p>Get stories, art, and updates from Burnline straight to your inbox.</p>
+        <p>Get issue updates from Burnline straight to your inbox. No spam or anything, I promise.</p>
         <form style="margin-top: 1rem;">
           <input type="email" placeholder="Email Address" class="newsletter-input"><br>
           <button type="submit" class="newsletter-button">Subscribe</button>
@@ -395,7 +395,9 @@
       </div>
       <div class="footer-column">
         <h4 style="color: var(--cyan);">Read</h4>
-        <p><a href="https://bowliopia.github.io/burnline/fiction.html">Issue 01</a></p>
+        <p><a href="https://bowliopia.github.io/burnline/fiction.html">Issue Library</a></p>
+        <p><a href="https://bowliopia.github.io/burnline/stories.html">Featured Stories</a></p>
+        <p><a href="https://bowliopia.github.io/burnline/staffpicks.html">Staff Picks</a></p>
       </div>
     </div>
     <div class="footer-bottom">
@@ -430,4 +432,5 @@
   </script>
 </body>
 </html>
+
 
